# easychangedirectory

./: CLAUDE.md  Cargo.toml  TODO.md  codecov.yml
.claude/: settings.json
.claude/commands/: pr.md
.github/: renovate.json
.github/workflows/: coverage.yml  rust.yml
src/: cli.rs  connect.rs  error.rs  init.rs  main.rs
src/app/: _app.rs  mod.rs  run.rs  search.rs  state.rs  ui.rs
src/app/item/: _item.rs  read.rs
src/config/: env.rs  log.rs
