[package]
name = "easychangedirectory"
description = "Tools for easy cd"
version = "0.8.0"
authors = ["dijdzv <dijdzv@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dijdzv/easychangedirectory"
edition = "2024"
categories = ["command-line-utilities", "filesystem"]
keywords = ["cli","terminal","cd"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["cargo", "derive"] }
envy = "0.4"
exitcode = "1.1"
handlebars = "6.3"
home = "0.5"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
ratatui = { version = "0.28.0", features = ["crossterm"] }

[profile.release]
lto = true
codegen-units = 1
